--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "node ./dist/index.js"
   },
   "dependencies": {
+    "@prisma/client": "^6.5.0",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
     "morgan": "^1.10.0"
@@ -19,7 +20,9 @@
     "@types/node": "^22.14.0",
     "jest": "^29.7.0",
     "jest-mock-extended": "^4.0.0-beta1",
+    "prisma": "^6.5.0",
     "ts-jest": "^29.3.1",
+    "tsx": "^4.19.3",
     "typescript": "^5.8.3"
   },
   "private": true
