--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@prisma/client": "^6.5.0",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
+    "express-validator": "^7.2.1",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
